<resources>
    <string name="app_name">GitApp</string>
    <string name="counter_default_value">0</string>
    <string name="counter_one">Counter one</string>
    <string name="counter_two">Counter two</string>
    <string name="counter_three">Counter three</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="same_text">Hello fragment</string>
    <string name="same_description">Same description</string>
    <string name="id">ID:</string>
    <string name="login">Login:</string>
</resources>