<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainActivityTextViewCounterOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counter_default_value" />

    <Button
        android:id="@+id/mainActivityButtonCounterOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counter_one" />

    <TextView
        android:id="@+id/mainActivityTextViewCounterTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counter_default_value" />

    <Button
        android:id="@+id/mainActivityButtonCounterTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counter_two" />

    <TextView
        android:id="@+id/mainActivityTextViewCounterThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counter_default_value" />

    <Button
        android:id="@+id/mainActivityButtonCounterThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counter_three" />

</LinearLayout>